<resources>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="about_share">Share</string>
    <string name="about_share2">TCASH Wallet App</string>
    <string name="about_share3">via</string>
    <string name="about_share_email">Share tWallet App via email</string>
    <string name="about_share_facebook">Share tWallet App via Facebook</string>
    <string name="about_share_sms">Share tWallet App via SMS</string>
    <string name="about_share_twitter">Share tWallet App via Twitter</string>
    <string name="about_support">Support</string>
    <string name="about_version">Version</string>
    <string name="actions">ACTIONS</string>
    <string name="agree_button">Agree</string>
    <string name="amount">Amount</string>
    <string name="app_link">http://www.telkomsel.com/</string>
    <string name="app_name_desc">Telkomsel TCASH Wallet</string>
    <string name="app_name_tel">TCASH wallet</string>
    <string name="app_title">Telkomsel\nWallet</string>
    <string name="app_version_desc">Version 1.0</string>
    <string name="auto_token_generation_and_subscriber_revalidation">TCASH Wallet detects changed SIM and MSISDN</string>
    <string name="bank_code">Bank Code</string>
    <string name="bankcode">Bank Code</string>
    <string name="basic_service">You are Basic Service Subsciber</string>
    <string name="body_message">Saya sedang menggunakan Telkomsel Wallet, sebuah dompet virtual yang memudahkan transaksi mobile. Unduh sekarang untuk transaksi cerdas.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_done">Done</string>
    <string name="btn_done1">DONE</string>
    <string name="btn_gototcash">Go TCASH</string>
    <string name="btn_later">Later</string>
    <string name="btn_next">Next</string>
    <string name="btn_no">NO</string>
    <string name="btn_ok">OK</string>
    <string name="btn_requestotp">Request New OTP</string>
    <string name="btn_sendotp">Send Verification Code</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_verifyotp">Verify Code</string>
    <string name="btn_verifypin">Verify PIN</string>
    <string name="btn_yes">YES</string>
    <string name="button_airtime_data_purchase">Airtime &amp; Data Purchase</string>
    <string name="button_airtime_data_purchase2">Airtime\nData</string>
    <string name="button_atm_bersama">ATM Bersama</string>
    <string name="button_bank_account">to Bank Account</string>
    <string name="button_bni">BNI</string>
    <string name="button_cabletv">Cable TV</string>
    <string name="button_cash">Cash In &amp; Cash Out</string>
    <string name="button_cash_in">Cash In</string>
    <string name="button_credit_card">Credit Card</string>
    <string name="button_delete">DELETE</string>
    <string name="button_edit">Edit</string>
    <string name="button_fixed_line_phone">Telephone</string>
    <string name="button_grapari">Grapari</string>
    <string name="button_here">Or Enter\n Merchant PIN code Here</string>
    <string name="button_insurance">Insurance</string>
    <string name="button_internet">Internet</string>
    <string name="button_kartu_halo">Kartu Halo</string>
    <string name="button_mandiri">Mandiri</string>
    <string name="button_mega">Mega</string>
    <string name="button_merchant">Merchant</string>
    <string name="button_multi_finance">Multi Finance</string>
    <string name="button_other">Other</string>
    <string name="button_others">Others (Billing Code)</string>
    <string name="button_package">Package</string>
    <string name="button_payment">Payment</string>
    <string name="button_pdam">PDAM (Water Bill)</string>
    <string name="button_pln">Electricity</string>
    <string name="button_proceed">Proceed</string>
    <string name="button_retail_purchase">Purchase</string>
    <string name="button_retail_store">Retail Store</string>
    <string name="button_save">SAVE FOR LATER</string>
    <string name="button_self">Self</string>
    <string name="button_sms_banking">SMS Banking</string>
    <string name="button_ticket">Ticket</string>
    <string name="button_token">QR / Token</string>
    <string name="button_topup">Top Up</string>
    <string name="button_transaction_history">Transaction History</string>
    <string name="button_transfer">Transfer</string>
    <string name="button_transport_travel">Transport &amp; Travel</string>
    <string name="button_use">USE NOW</string>
    <string name="cancelled">Cancelled</string>
    <string name="cannot_reset_tcash_pin">We’re sorry your request is invalid. You are registered as Basic Service. Please upgrade the TCASH Service via Grapari</string>
    <string name="card_event_detected">POS transaction detected</string>
    <string name="card_guide">You may ADD another card joining TCASH Wallet service!</string>
    <string name="card_home_history">Transaction History</string>
    <string name="card_home_megacash">MEGACASH</string>
    <string name="card_home_paywave">Pay Wave</string>
    <string name="card_home_prepaid">Pre-Paid</string>
    <string name="card_removed">Card have been deleted</string>
    <string name="change_user">Change User</string>
    <string name="check_all_input_value">Please check your entries, All fields are mandatory unless stated otherwise</string>
    <string name="check_boxes">Please agree with terms &amp; conditions.</string>
    <string name="check_email">Please enter a valid email address</string>
    <string name="check_mobile_number">Check input value type - Mobile Number</string>
    <string name="check_mobile_number0">Mobile Number must start with 0</string>
    <string name="check_pin">Check input value type - PIN</string>
    <string name="check_token">Your information not found, need to revalidate.</string>
    <string name="choose_area">Choose Area</string>
    <string name="comfirm_id_cabletv">ID Number</string>
    <string name="comfirm_id_fixedline">Telkom Id/Flexi No.</string>
    <string name="comfirm_id_internet">Speedy No.</string>
    <string name="comfirm_id_kartu">Halo Number</string>
    <string name="comfirm_id_pdam">PDAM ID</string>
    <string name="comfirm_id_pln">Electricity Meter ID</string>
    <string name="comfirm_id_transfer">HP Number</string>
    <string name="comment_transfer">Comment</string>
    <string name="confirm_new_pin">Confirm New PIN</string>
    <string name="coupon_delete_confirm">Do you want to delete this coupon?</string>
    <string name="create_token_button">Create Token</string>
    <string name="current_location">current\nlocation</string>
    <string name="current_pin_code">Current PIN Code</string>
    <string name="customerId_cabletv">Customer ID</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_otp">Enter Verification Code (4 Digits)</string>
    <string name="hint_tcash_identity_number">Identity Number</string>
    <string name="id_number">ID Number</string>
    <string name="input_date_of_birth">Date of Birth</string>
    <string name="input_first_name">First name</string>
    <string name="input_last_name">Last name</string>
    <string name="input_mobile_number">Mobile No.</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="msg_heirs">Heirs</string>
    <string name="msg_topup1">You are about to do</string>
    <string name="msg_topup2">top up to</string>
    <string name="msg_topup3">using</string>
    <string name="msg_topup4">Input</string>
    <string name="msg_type_insurance">Type of Insurance</string>
    <string name="name">Name</string>
    <string name="post">Post</string>
    <string name="str_tcash">TCASH</string>
    <string name="subtitle_confirmation">Confirmation</string>
    <string name="tcash_cash_in_atm_bersama_find_button">Find Nearby ATM</string>
    <string name="tcash_cash_in_atm_bersama_topup_detail_message1">Choose Transfer Menu -&gt; Transfer online between banks(other bank)</string>
    <string name="tcash_cash_in_atm_bersama_topup_detail_message2">2. Input bank code</string>
    <string name="tcash_cash_in_atm_bersama_topup_detail_message3">3. Input phone number as account no</string>
    <string name="tcash_cash_in_atm_bersama_topup_detail_message4">4. Input message(optional)</string>
    <string name="tcash_cash_in_atm_bersama_topup_detail_message5">5. Input nominal</string>
    <string name="tcash_cash_in_atm_bersama_topup_detail_message6">6. You\'re done!</string>
    <string name="tcash_cash_in_atm_bersama_topup_message">How to top up your TCASH via ATM</string>
    <string name="tcash_cash_in_out_find_message">You must enable your gps to use this features</string>
    <string name="text_verifymsisdn_request">Request new code</string>
    <string name="title_tcash_forget_pin">TCASH Forget PIN?</string>
</resources>