<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/help_container" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@id/home_help_center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="150dp" android:text="@string/button_payment" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/white14" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="45dp" android:layout_marginBottom="100dp" android:text="@string/button_retail_purchase" android:layout_toLeftOf="@id/home_help_center" android:layout_alignParentBottom="true" style="@style/white14" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginBottom="100dp" android:text="@string/button_transfer" android:layout_toRightOf="@id/home_help_center" android:layout_alignParentBottom="true" style="@style/white14" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:layout_marginBottom="58dp" android:text="@string/button_token" android:layout_toRightOf="@id/home_help_center" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/white14" />
    <TextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60dp" android:layout_marginBottom="48dp" android:text="@string/button_airtime_data_purchase2" android:layout_toLeftOf="@id/home_help_center" android:layout_alignParentBottom="true" style="@style/white14" />
</RelativeLayout>
