<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/pageArea" android:background="@color/n_lightgray" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/n_titlebar_logo" android:background="@color/n_orange" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090079" android:layout_alignParentTop="true">
        <Button android:background="@drawable/ic_appbar_back_white" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x1801" android:layout_height="UNKNOWN_DATA_0x1801" android:layout_marginLeft="@dimen/n_margin_frame" android:layout_marginRight="@dimen/n_margin_frame" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:id="@id/titlebar_view" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="@dimen/n_margin_frame" android:layout_marginRight="@dimen/n_margin_frame" android:text="@string/title_tcash_forget_pin" android:layout_centerInParent="true" style="@style/n_titlebar_text" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/n_margin_frame" android:layout_below="@id/n_titlebar_logo">
        <EditText android:id="@id/forget_tcashpin_mobilenum_edittext" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:hint="@string/input_mobile_number" android:maxLength="13" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" style="@style/n_input_edittext_top" />
        <EditText android:id="@id/enter_otp_edittext" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:hint="@string/hint_otp" android:maxLength="4" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" style="@style/n_input_edittext_top" />
        <TextView android:textColor="@color/n_red" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/request_new_otp_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/text_verifymsisdn_request" style="@style/n_tnc_text" />
        <EditText android:id="@id/forget_tcashpin_firstname_edittext" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:hint="@string/input_first_name" android:maxLines="1" style="@style/n_input_edittext_middle" />
        <EditText android:id="@id/forget_tcashpin_lastname_edittext" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:hint="@string/input_last_name" android:maxLines="1" style="@style/n_input_edittext_middle" />
        <RelativeLayout android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071">
            <Button android:id="@id/forget_tcashpin_birth_select_button" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:hint="@string/input_date_of_birth" android:maxLines="1" style="@style/n_input_edittext_middle" />
        </RelativeLayout>
        <EditText android:id="@id/forget_tcashpin_identity_number_edittext" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:layout_marginBottom="16dp" android:hint="@string/hint_tcash_identity_number" android:maxLines="1" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" style="@style/n_input_edittext_bottom" />
        <Button android:id="@id/forget_tcashpin_done_button" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090071" android:text="@string/btn_done" style="@style/n_common_orange_button" />
    </LinearLayout>
</RelativeLayout>
